--- a/MvcCoreDeployment/Views/Home/Index.cshtml
+++ b/MvcCoreDeployment/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
 <div class="text-center">
     <h1 class="display-4">App deployment github</h1>
-    <h3 style="color:forestgreen;">@ViewData["SALUDO"]</h3>
+    <h3 style="color:red;">@ViewData["SALUDO"]</h3>
     
     <ul class="list-group">
         @foreach (int num in Model)
